tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__TheOverclockingo-AAAAAAAAAAAAAAAAAAAMdA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3188,
  "prerequisites": [
    3187
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tin Plasma is more power-dense, but it's not a required upgrade. As you scale up, it's always worth it to look back at Helium Plasma for how renewable it is, something that Tin Plasma has unfortunately lost a bit of. It can be made renewable, but one of its strengths was in the Molecular Transformer recipe that transformed Tin, the output, into Silver, one of the inputs. This recipe is now in the new Molecular Transformer Multiblock and does not scale as well as before. Therefore it might be easier to use void miners for silver or to stick with Helium Plasma.\n\nAs per usual, running a lower tier recipe awards you with an overclock. Unlike other GT machines, though, the Fusion Reactor's overclock doubles both speed and energy consumption, which maintains the energy consumption per recipe but gives only half of a speed boost that a perfect overclock (like the Large Chemical Reactor) would. This means that a t2 reactor can produce exactly twice as much power as a t1 in the form of plasma output, but the upgrade is bigger than that when taking better turbines into account.\n\nWhat comes next, then? Tier 3 is what is next. There is no new fuel to be used here, your options are either 4x speed on Helium or 2x speed on Tin. After getting the cheaper Americium recipe that's available on t3, you will be able to make more reactors at a cheaper cost, but this lack of fuel upgrade will still be problematic in your progression. You will have to find other ways to upgrade your power, which will be revealed after this.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Overclocking of the Ages",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3187
  ],
  "rewards": [],
  "tasks": []
}
