tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__ThoriumTetrafluo-AAAAAAAAAAAAAAAAAAAMew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3195,
  "prerequisites": [
    3177
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Whether you've mathed it out from NEI, looked at the spreadsheet or done something else, you might have figured something out: Fuel 3 is better in every way. More power, more byproducts, more everything. However, both recipes for it use Thorium Tetrafluoride (TF4), and the source of this is salt sparging, done in the Sparge Tower. Not only that, but Fuel 3 can only be consumed by having 4 LuV Buffered Dynamo Hatches in the LFTR, which means that it's a fair bit away from the previous steps in this chain.\n\nOnce you've made it there, though, you can start working on getting this fuel. To make it, you will need at least one Sparge Tower dedicated to using Fluorine, with T Salt or TB Salt (TB Salt is better, get it from Fuel 2). There is a recipe that uses Helium, but it's not required for Fuel 3 and is meant for byproducts, so the quest for it is in the breeding half of this branch. Using a single tower for both recipes is a bad idea, so don't do it!\n\nPreferably, you should input Fluorine and TB Salt and let it run for a while. Speeding up the recipe by overclocking and making more towers is a good idea, since the TF4 is your bottleneck now. Alongside it, you get several fluorides: Lithium, Neptunium, Technetium and Selenium. These might prove useful in the future, but your goal is the Thorium one.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Thorium Tetrafluoride and Fuel 3",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3177
  ],
  "rewards": [],
  "tasks": []
}
