tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__ThoriumasBreedin-AAAAAAAAAAAAAAAAAAAMUw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3155,
  "prerequisites": [
    3151
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Alternatively, you might choose to only process Thorium for its main output, Lutetium. This is important because Lutetium is required to make Americium in a Fusion Reactor down the line, and that is a recipe you will need to do in order to progress. Your objective is to breed Thorium into Lutetium, which means you might want to focus on a breeder reactor.\n\nWhat is a breeder reactor? In this case, it's an IC2 nuke designed to consume as much Thorium as possible. The main cost here is the amount of chambers or nuke components you'll have to make. If you want to save on Overclocked Heat Vents, make a tower of 0-chamber nukes, each with the following setup:\n\nRPR\nORP\nRPR\nPRP\nRPR\nORP\n\nR -> Single Fuel Rod of Thorium (9 needed)\nO -> Overclocked Heat Vent (2 needed)\nP -> Reactor Plating (7 needed)\n\nOtherwise, if you have excess Overclocked Heat Vents and want to save up on chambers, turn to this setup:\n\nORORORO\nROEOEOR\nORORORO\nROROROR\nOPOPOPO\nROROROR\n\nE -> Heat Exchanger (2 needed)\nR -> Quad Fuel Rod of Thorium (16 needed)\nO -> Overclocked Heat Vent (21 needed)\nP -> Reactor Plating (3 needed)\n\n(Each of the latter is worth 7x the former in terms of breeding.)\n\nTo complete this quest, you'll need to get Lutetium from one cycle of the any reactor setup. Which setup you choose is up to you, of course.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Thorium as Breeding Fuel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3151
  ],
  "rewards": [],
  "tasks": []
}
