tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__UraniumBasicNuke-AAAAAAAAAAAAAAAAAAAMYQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3169,
  "prerequisites": [
    3168
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The big brother to the Thorium nuke, the Uranium nuke. The biggest setup you can put together for a single IC2 Nuclear Reactor uses 7 Quad Uranium Rods, or 28 single rods. This amounts to almost 3 stacks of Uranium 238 (U238), a difficult amount to get from Thorium but much easier to get from the green ores found in Phobos. The setup is very similar to the previous one, but with some important differences. What are they?\n\nThe first one is the fuel. These fuel rods use a mixture of U238 and a bit of U235, which is rarer. To get U235, you can gamble on the chance of getting the dust from processing some of the related ores, which might be good enough, but it's also possible to use Thaumcraft to convert 9 nuggets of U238 to 7 nuggets of U235, without needing a lot of Thaumcraft progress. Assembling this fuel and putting it into rods gets it ready to be used for power, with more EU/t but less burn time compared to Thorium, 50000 seconds for Thorium compared to 20000 seconds for Uranium.\n\nThe second difference in the nuke setup. Uranium eats up more per rod, so a different arrangement inside the nuke is required. For the highest EU/t in this situation, 4200 EU/t, the setup is:\n\nRVOEOOVOP\nPVOOVOORO\nPOROOROOV\nVOOVOOVOP\nOROOROORO\nPOVPOVPOV\n\nE -> Component Heat Exchanger (1 needed)\nV -> Component Heat Vent (11 needed)\nO -> Overclocked Heat Vent (28 needed)\nR -> Quad Fuel Rod of Uranium (7 needed)\nP -> Reactor Plating (7 needed)\n\nWhen the fuel rods get repleted, you can reprocess them to get 3/4 of the U235 back, and also a bit of Plutonium.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Uranium Basic Nukes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3168
  ],
  "rewards": [],
  "tasks": []
}
