tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__PowerfulNuclearP-AAAAAAAAAAAAAAAAAAAAGg==__VacuumNukes-AAAAAAAAAAAAAAAAAAAMXw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3167,
  "prerequisites": [
    3166
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What's the next step, running nuclear reactors in a perfect vacuum? That would be pretty funny, I'd like to see that.\n\nDisclaimer: this last step is not very stable. It's very risky to do it in servers with no backups, because it relies on redstone circuits to keep the reactor from exploding. Use multiple failsafes to guarantee safety. Never ever build a vacuum nuke in a Thermos server!\n\nVacuum nukes are an interesting GTNH-specific setup. They use only three components: fuel rods, platings to fill the empty slots for automation purposes, and coolant cells. Those cells you have used to make Energy Hatches, for example, they're used here to keep the reactor from overheating and exploding. The main difference this setup has is that these cells are consumable, and will wear out over time. You will need to add fresh cells into the reactor to keep running it safely, but the crux of the show is that you don't need to make new ones - you just need to cool them down again.\n\nThe Vacuum Freezer! That's why it's called a vacuum nuke! Elementary, my dear Steve. This kind of setup relies on using EU to refill the coolant cells, so to speak, and get much more EU from the reactor than you spend to keep it running. However, the redstone automation for this is quite tricky. If you just try it blindly, it might take you a long time to figure it out, and it might have explosive results. Check the Vacuum Reactors page on the wiki ([url]https://wiki.gtnewhorizons.com/wiki/Vacuum_Reactor[/url]) if you want a detailed guide that goes far beyond what I could write in this quest description.\n\nThis quest task is for the last setup shown in the wiki, specifically the 8720-43600 EU, 40 Quad Uranium setup. As the title implies, it can produce up to 43600 EU/t, but it will require multiple filters and failsafes to run it safely. The bonus, compared to fluid nukes, is that the LHE + turbine setup is not necessary for these high output numbers.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Vacuum Nukes",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3166
  ],
  "rewards": [],
  "tasks": []
}
